--- a/base.css
+++ b/base.css
@@ -7,6 +7,9 @@ html{
     height: 100%;
     width: 100%;
     background-color:navajowhite;
+    background-image: url("images/allanimals.png");
+    background-repeat: repeat;
+    background-size:28%;
 }
 
 body {
